--- a/app/globals.css
+++ b/app/globals.css
@@ -11,10 +11,9 @@
     position: relative;
     display: flex;
     width: 100%;
-    height: 22.2rem;
-    max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
+    
   }
   .embla:before,
   .embla:after {
@@ -23,7 +22,7 @@
     right: 0;
     content: '';
     display: block;
-    height: calc(50% - 32px / 2);
+    height: calc(50% - 100px / 2); /* 100px is the height of the picker */
     z-index: 1;
     pointer-events: none;
   }
@@ -52,7 +51,7 @@
     min-width: 50%;
     justify-content: center;
     line-height: 1;
-    font-size: 1.8rem;
+    font-size: 1rem;
   }
   .embla__ios-picker__scene {
     min-width: 100%;
@@ -64,7 +63,7 @@
     width: 100%;
     position: relative;
     display: flex;
-    perspective: 1000px;
+    perspective: 1200px;
     align-items: center;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -76,16 +75,17 @@
   }
   .embla__ios-picker__viewport--perspective-left {
     perspective-origin: calc(50% + 130px) 50%;
-    transform: translateX(27px);
+    transform: translateX(50px);
   }
   .embla__ios-picker__viewport--perspective-right {
     perspective-origin: calc(50% - 130px) 50%;
-    transform: translateX(-27px);
+    transform: translateX(-50px);
   }
   .embla__ios-picker__container {
     height: 32px;
     width: 100%;
     position: absolute;
+    color: blueviolet;
     transform-style: preserve-3d;
     will-change: transform;
   }
@@ -95,7 +95,7 @@
     left: 0 !important;
     width: 100%;
     height: 100%;
-    font-size: 19px;
+    font-size: 3rem;
     text-align: center;
     display: flex;
     align-items: center;
